--- a/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -45,11 +45,12 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@MC10760
 LastExecutedLaunchName=MC10760
 LastExecutedPIEPreviewDevice=
+NewWindowPosition=(X=155,Y=53)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -86,12 +87,14 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [RootWindow]
 ScreenPosition=X=160.000 Y=70.000
@@ -112,7 +115,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=M:/GitHub/MM/MurderousMusk/Content/
+UNR=M:/GitHub/MM/MurderousMusk/Content/TopDownBP/Maps
 BRUSH=M:/GitHub/MM/MurderousMusk/Content/
 FBX=M:/GitHub/MM/MurderousMusk/Content/
 FBXAnim=M:/GitHub/MM/MurderousMusk/Content/
@@ -658,5 +661,58 @@ HierarchicalLODOutliner.TimeStamp=2017.08.14-15.12.36
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2017.08.14-15.12.38
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintProfiler.TimeStamp=2017.08.14-15.12.33
+BlueprintProfiler.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2017.08.14-15.12.33
+BlueprintGraph.LastCompileMethod=Unknown
+
+[MRU]
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+
+[DetailCategories]
+TopDownCharacter_C.Tick=True
+TopDownCharacter_C.Character=True
+TopDownCharacter_C.Camera=True
+TopDownCharacter_C.Pawn=True
+TopDownCharacter_C.Rendering=True
+TopDownCharacter_C.Replication=True
+TopDownCharacter_C.Input=True
+TopDownCharacter_C.Actor=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.Color Grading=True
+CameraComponent.Tonemapper=True
+CameraComponent.Mobile Tonemapper=True
+CameraComponent.Lens=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
 
 
