AI Movement Fix - Hearing now works as intended. Also changed camera view to orthographic

--- a/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1674,6 +1674,8 @@ REINST_TopDownCharacter_C_329.Camera=True
 REINST_TopDownCharacter_C_329.Pawn=True
 REINST_TopDownCharacter_C_329.Input=True
 REINST_TopDownCharacter_C_329.Actor=True
+REINST_AI_Character_C_100.Tick=True
+REINST_AI_Character_C_100.Replication=True
 
 [MessageLog]
 LastLogListing=LoadErrors
