--- a/MurderousMusk/Saved/Config/Windows/Editor.ini
+++ b/MurderousMusk/Saved/Config/Windows/Editor.ini
@@ -166,7 +166,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
 						(\
-							"SizeCoefficient": 0.14008554816246033,\
+							"SizeCoefficient": 0.15000000596046448,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
@@ -197,7 +197,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.709919273853302,\
+							"SizeCoefficient": 0.69999998807907104,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
@@ -205,7 +205,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.80000001192092896,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 0",\
+									"ForegroundTab": "Document : 7",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -217,11 +217,11 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.20000000298023224,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "None",\
+									"ForegroundTab": "CompilerResults",\
 									"Tabs": [\
 										(\
 											"TabId": "CompilerResults",\
-											"TabState": "ClosedTab"\
+											"TabState": "OpenedTab"\
 										),\
 										(\
 											"TabId": "FindResults",\
