created branch inventory

--- a/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,8 +93,7 @@ ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=160.000 Y=70.000
@@ -714,5 +713,8 @@ SceneComponent.ComponentReplication=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
+
+[MessageLog]
+LastLogListing=LoadErrors
 
 
