first attempt for inventory

--- a/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,6 +94,8 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/InventoryType.InventoryType
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Inventory.Inventory
 
 [RootWindow]
 ScreenPosition=X=160.000 Y=70.000
@@ -713,8 +715,18 @@ SceneComponent.ComponentReplication=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
+UserDefinedStruct.Structure=True
+UserDefinedStruct.DefaultValues=True
+UserDefinedEnum.Enumerators=True
 
 [MessageLog]
 LastLogListing=LoadErrors
+
+[AssetEditorToolkitTabLocation]
+/Game/TopDownBP/Blueprints/Inventory.Inventory=0
+/Game/TopDownBP/Blueprints/InventoryType.InventoryType=0
+
+[DetailCategoriesAdvanced]
+UserDefinedEnum.Enumerators=False
 
 
