renaming Inventory to InventoryItem & autosaves

--- a/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -86,7 +86,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
-ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.CurrentViewType=2
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 
 [EditorStartup]
@@ -94,7 +94,6 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/InventoryType.InventoryType
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Inventory.Inventory
 
 [RootWindow]
@@ -718,6 +717,19 @@ SceneComponent.Events=True
 UserDefinedStruct.Structure=True
 UserDefinedStruct.DefaultValues=True
 UserDefinedEnum.Enumerators=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+
+[DetailCustomWidgetExpansion]
+UserDefinedStruct=
 
 [MessageLog]
 LastLogListing=LoadErrors
