Simple two destination patrol with interrupts.

--- a/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,7 +87,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/AI
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -664,6 +664,8 @@ BlueprintProfiler.TimeStamp=2017.09.29-21.57.35
 BlueprintProfiler.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2017.09.29-21.57.35
 BlueprintGraph.LastCompileMethod=External
+MurderousMusk.TimeStamp=2017.10.09-14.19.19
+MurderousMusk.LastCompileMethod=Runtime
 
 [MRU]
 MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -1676,14 +1678,117 @@ REINST_TopDownCharacter_C_329.Input=True
 REINST_TopDownCharacter_C_329.Actor=True
 REINST_AI_Character_C_100.Tick=True
 REINST_AI_Character_C_100.Replication=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+StaticMeshActor.Navigation=False
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Tonemapper=True
+PostProcessVolume.Mobile Tonemapper=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Actor=True
+delete_this_C.TransformCommon=True
+delete_this_C.StaticMesh=True
+delete_this_C.Materials=True
+delete_this_C.Physics=True
+delete_this_C.Collision=True
+delete_this_C.Lighting=True
+delete_this_C.Rendering=True
+delete_this_C.Tags=True
+delete_this_C.Cooking=True
+delete_this_C.Input=True
+delete_this_C.Actor=True
+delete_this_C.Tick=True
+delete_this_C.Replication=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_SwitchInteger.PinOptions=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+REINST_TopDownCharacter_C_333.TransformCommon=True
+REINST_TopDownCharacter_C_333.Animation=True
+REINST_TopDownCharacter_C_333.Mesh=True
+REINST_TopDownCharacter_C_333.Physics=True
+REINST_TopDownCharacter_C_333.Clothing=True
+REINST_TopDownCharacter_C_333.Collision=True
+REINST_TopDownCharacter_C_333.ClothingSimulation=True
+REINST_TopDownCharacter_C_333.Lighting=True
+REINST_TopDownCharacter_C_333.Rendering=True
+REINST_TopDownCharacter_C_333.Tags=True
+REINST_TopDownCharacter_C_333.Activation=True
+REINST_TopDownCharacter_C_333.Cooking=True
+REINST_TopDownCharacter_C_333.Character Movement: Jumping / Falling=True
+REINST_TopDownCharacter_C_333.Character Movement (General Settings)=True
+REINST_TopDownCharacter_C_333.Character Movement: Walking=True
+REINST_TopDownCharacter_C_333.Character Movement: Swimming=True
+REINST_TopDownCharacter_C_333.Character Movement: Flying=True
+REINST_TopDownCharacter_C_333.Character Movement: Custom Movement=True
+REINST_TopDownCharacter_C_333.Character Movement (Rotation Settings)=True
+REINST_TopDownCharacter_C_333.Character Movement: Physics Interaction=True
+REINST_TopDownCharacter_C_333.Character Movement (Networking)=True
+REINST_TopDownCharacter_C_333.Character Movement=True
+REINST_TopDownCharacter_C_333.Character Movement: Avoidance=True
+REINST_TopDownCharacter_C_333.Character Movement: NavMesh Movement=True
+REINST_TopDownCharacter_C_333.RootMotion=True
+REINST_TopDownCharacter_C_333.NavMovement=True
+REINST_TopDownCharacter_C_333.Velocity=True
+REINST_TopDownCharacter_C_333.PlanarMovement=True
+REINST_TopDownCharacter_C_333.MovementComponent=True
+REINST_TopDownCharacter_C_333.Shape=True
+REINST_TopDownCharacter_C_333.Navigation=True
+REINST_TopDownCharacter_C_333.Character=True
+REINST_TopDownCharacter_C_333.Camera=True
+REINST_TopDownCharacter_C_333.Pawn=True
+REINST_TopDownCharacter_C_333.Input=True
+REINST_TopDownCharacter_C_333.Actor=True
 
 [MessageLog]
 LastLogListing=LoadErrors
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/TopDownBP/Blueprints/AI_Character.AI_Character;
 RecentlyPlaced=/Script/Engine.Pawn;/Engine/Transient.ActorFactoryPawn_0
 RecentlyPlaced=/Script/Engine.DefaultPawn;
@@ -1719,5 +1824,6 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 /Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=1
 /Game/TopDownBP/AI/AI_Movement.AI_Movement=1
 /Game/TopDownBP/Blueprints/AI_Character.AI_Character=1
+/Game/TopDownBP/AI/delete_this.delete_this=1
 
 
