created InteractiveObject and it's Interactive functionality

--- a/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,8 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@MC10760
 LastExecutedLaunchName=MC10760
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=155,Y=53)
+NewWindowPosition=(X=800,Y=0)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -94,7 +95,8 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Inventory.Inventory
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/InteractiveObject.InteractiveObject
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/InventoryItem.InventoryItem
 
 [RootWindow]
 ScreenPosition=X=160.000 Y=70.000
@@ -727,18 +729,101 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Input=True
+Actor.Actor=True
+InteractiveObject_Blueprint_C.TransformCommon=True
+InteractiveObject_Blueprint_C.Rendering=True
+InteractiveObject_Blueprint_C.Input=True
+InteractiveObject_Blueprint_C.Actor=True
+InteractiveObject_Blueprint_C.Tick=True
+InteractiveObject_Blueprint_C.Replication=True
+InteractiveObject_C.TransformCommon=True
+InteractiveObject_C.Rendering=True
+InteractiveObject_C.Input=True
+InteractiveObject_C.Actor=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Input=True
+InteractiveObject_C.Tick=True
+InteractiveObject_C.Replication=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+ByteProperty.Variable=True
+ByteProperty.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_BreakStruct.PinOptions=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_GetInputAxisKeyValue.Input=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Mobile=True
 
 [DetailCustomWidgetExpansion]
 UserDefinedStruct=
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/Inventory.Inventory=0
 /Game/TopDownBP/Blueprints/InventoryType.InventoryType=0
+/Game/TopDownBP/Blueprints/InteractiveObject_Blueprint.InteractiveObject_Blueprint=0
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
 
 [DetailCategoriesAdvanced]
 UserDefinedEnum.Enumerators=False
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/Blueprints/InteractiveObject.InteractiveObject;
+RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
+
+[DetailPropertyExpansion]
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+Object="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 
 
