got left out from the previous commit

--- a/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -824,6 +824,6 @@ MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingC
 PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-Object="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+Object=
 
 
