working on mouse right click interacion...

--- a/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@MC10760
 LastExecutedLaunchName=MC10760
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=800,Y=0)
+NewWindowPosition=(X=155,Y=53)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -96,7 +96,6 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/InteractiveObject.InteractiveObject
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/InventoryItem.InventoryItem
 
 [RootWindow]
 ScreenPosition=X=160.000 Y=70.000
@@ -805,6 +804,7 @@ LastLogListing=MapCheck
 /Game/TopDownBP/Blueprints/InventoryType.InventoryType=0
 /Game/TopDownBP/Blueprints/InteractiveObject_Blueprint.InteractiveObject_Blueprint=0
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
+/Game/TopDownBP/Blueprints/InventoryItem.InventoryItem=0
 
 [DetailCategoriesAdvanced]
 UserDefinedEnum.Enumerators=False
