--- a/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,24 +87,18 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Inventory
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Inventory/Interact_BPI.Interact_BPI
-OpenAssetsAtExit=/Game/Inventory/ItemDrop_BP.ItemDrop_BP
-OpenAssetsAtExit=/Game/Inventory/Item_Data_UI.Item_Data_UI
-OpenAssetsAtExit=/Game/Inventory/Inventory_UI.Inventory_UI
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/Inventory/Inventory_Struct.Inventory_Struct
 
 [RootWindow]
 ScreenPosition=X=1257.000 Y=0.000
 WindowSize=X=644.000 Y=788.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1637,8 +1631,8 @@ PreviewAspectRatio=16:9
 
 [DetailPropertyExpansion]
 Border="\"Object.Appearance.Background\" "
-ContentWidget="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-PanelWidget="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
+ContentWidget="\"Object.Layout.Slot.Object.Layout.Layout"
+PanelWidget="\"Object.Layout.Slot.Object.Layout.Layout"
 Widget=
 Visual=
 Object=
@@ -1651,11 +1645,11 @@ EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.Categ
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.Pow2GridSizes\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.GridSnapping.ScalingGridSizes\" \"Object.Preview.PreviewMeshes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" "
-Button="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
+Button="\"Object.Layout.Slot.Object.Layout.Layout"
 Inventory_UI_C=
 UserWidget=
-TextBlock="\"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
-TextLayoutWidget="\"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
+TextBlock="\"Object.Layout.Slot.Object.Layout.Layout"
+TextLayoutWidget="\"Object.Layout.Slot.Object.Layout.Layout"
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 TopDownCharacter_C=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
