Sorry for messing with you master...

--- a/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MurderousMusk/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,12 +50,10 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@MC10760
 LastExecutedLaunchName=MC10760
 LastExecutedPIEPreviewDevice=
-<<<<<<< HEAD
 NewWindowPosition=(X=315,Y=143)
-=======
-NewWindowPosition=(X=155,Y=53)
+NewWindowPosition=(X=315,Y=143)
+None=======
 LastExecutedPlayModeType=PlayMode_InEditorFloating
->>>>>>> master
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -98,28 +96,16 @@ ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 None=======
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/TopDownBP/Maps/FraserMap
 
 [AssetEditorManager]
 CleanShutdown=True
-<<<<<<< HEAD
+CleanShutdown=True
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/Inventory/Item_Data_UI.Item_Data_UI
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/Inventory/Inventory_Struct.Inventory_Struct
-OpenAssetsAtExit=/Game/Inventory/Inventory_UI.Inventory_UI
-OpenAssetsAtExit=/Game/Inventory/ItemDrop_BP.ItemDrop_BP
-=======
-=======
-CleanShutdown=False
-<<<<<<< HEAD
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/InteractiveObject.InteractiveObject
-=======
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Inventory.Inventory
->>>>>>> master
->>>>>>> master
->>>>>>> master
+None=======
+None=======
+None=======
 
 [RootWindow]
 ScreenPosition=X=1257.000 Y=0.000
@@ -694,9 +680,12 @@ SequencerWidgets.TimeStamp=2017.09.29-19.34.45
 SequencerWidgets.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2017.09.29-19.34.37
 ExternalImagePicker.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2017.09.29-19.34.38
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/FraserMap
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [DetailCategories]
 TopDownCharacter_C.Tick=True
@@ -756,11 +745,16 @@ UserDefinedStruct.Structure=True
 UserDefinedStruct.DefaultValues=True
 UserDefinedStruct.DefaultValues=True
 BoolProperty.Variable=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
 BoolProperty.DefaultValueCategory=True
 StructProperty.Variable=True
 StructProperty.DefaultValueCategory=True
 K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_BreakStruct.PinOptions=True
 K2Node_BreakStruct.PinOptions=True
 CanvasPanel.Behavior=True
 CanvasPanel.Clipping=True
@@ -790,7 +784,10 @@ K2Node_VariableSet.DefaultValueCategory=True
 K2Node_VariableSet.Events=True
 K2Node_VariableGet.Events=True
 EdGraph.Graph=True
+EdGraph.Graph=True
 EdGraph.Inputs=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
 EdGraph.Outputs=True
 TextBlock.Layout=True
 TextBlock.Content=True
@@ -806,8 +803,14 @@ ArrayProperty.DefaultValueCategory=True
 K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
 K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+K2Node_CallFunction.Outputs=True
+None=======
+None=======
+None=======
 None=======
 UserDefinedEnum.Enumerators=True
 StaticMeshActor.TransformCommon=True
@@ -820,9 +823,6 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
 Actor.TransformCommon=True
 Actor.Rendering=True
 Actor.Input=True
@@ -845,25 +845,17 @@ SphereReflectionCapture.Cooking=True
 SphereReflectionCapture.Input=True
 InteractiveObject_C.Tick=True
 InteractiveObject_C.Replication=True
-EdGraph.Graph=True
-EdGraph.Inputs=True
-EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
 K2Node_FunctionEntry.Outputs=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
-BoolProperty.Variable=True
-BoolProperty.DefaultValueCategory=True
 ByteProperty.Variable=True
 ByteProperty.DefaultValueCategory=True
-K2Node_VariableGet.Variable=True
-K2Node_VariableGet.DefaultValueCategory=True
-K2Node_BreakStruct.PinOptions=True
-K2Node_CallFunction.Graph=True
-K2Node_CallFunction.Inputs=True
-K2Node_CallFunction.Outputs=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 K2Node_GetInputAxisKeyValue.Input=True
@@ -872,9 +864,6 @@ PlayerStart.Object=True
 PlayerStart.Rendering=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
-=======
-<<<<<<< HEAD
->>>>>>> master
 TopDownGameMode_C.Tick=True
 TopDownGameMode_C.Classes=True
 TopDownGameMode_C.Game=True
@@ -1034,9 +1023,6 @@ K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
 IntProperty.Variable=True
 IntProperty.DefaultValueCategory=True
-K2Node_FunctionEntry.Graph=True
-K2Node_FunctionEntry.Inputs=True
-K2Node_FunctionEntry.Outputs=True
 TopDownCharacter_C.TransformCommon=True
 TopDownCharacter_C.Animation=True
 TopDownCharacter_C.Mesh=True
@@ -1078,7 +1064,6 @@ ItemDrop_BP_C.Rendering=True
 ItemDrop_BP_C.Replication=True
 ItemDrop_BP_C.Input=True
 ItemDrop_BP_C.Actor=True
->>>>>>> master
 StaticMeshComponent.Variable=True
 StaticMeshComponent.TransformCommon=True
 StaticMeshComponent.Sockets=True
@@ -1092,9 +1077,7 @@ StaticMeshComponent.Tags=True
 StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
-<<<<<<< HEAD
 StaticMeshComponent.Mobile=True
-=======
 ItemDrop_BP_C.TransformCommon=True
 MyChar_C.Default=True
 REINST_TopDownCharacter_C_340.TransformCommon=True
@@ -1638,10 +1621,23 @@ REINST_TopDownCharacter_C_760.Input=True
 REINST_TopDownCharacter_C_760.Actor=True
 TopDownCharacter_C.Default=True
 Inventory_UI_C.Default=True
+Item_Data_UI_C.Default=True
+Item_Data_UI_C.Appearance=True
+Item_Data_UI_C.Interaction=True
+Item_Data_UI_C.Input=True
+Item_Data_UI_C.Designer=True
+Item_Data_UI_C.Layout=True
+Item_Data_UI_C.Behavior=True
+Item_Data_UI_C.Clipping=True
+Item_Data_UI_C.Performance=True
+Item_Data_UI_C.Render Transform=True
+Item_Data_UI_C.Navigation=True
+InteractiveObject_C.Default=True
 
 [MessageLog]
 LastLogListing=LoadErrors
 LastLogListing=LoadErrors
+LastLogListing=MapCheck
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -1656,7 +1652,7 @@ User Created=False
 [DetailCustomWidgetExpansion]
 ArrayProperty=ArrayProperty.DefaultValueCategory.None,
 MyChar_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 TopDownCharacter_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Pick Up Event,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Pick Up Event,
@@ -1713,10 +1709,12 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Pick Up Event,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Pick Up Event,
 ItemDrop_BP_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 UserDefinedStruct=
+UserDefinedStruct=
 StructProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 ObjectProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 Item_Data_UI_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -1730,9 +1728,10 @@ PreviewAspectRatio=16:9
 Border="\"Object.Appearance.Background\" "
 ContentWidget="\"Object.Layout.Slot.Object.Layout.Layout"
 PanelWidget="\"Object.Layout.Slot.Object.Layout.Layout"
-Widget="\"Object.Selected Item\" \"Object.Selected Item\" "
-Visual="\"Object.Selected Item\" \"Object.Selected Item\" "
+Widget=
+Visual=
 Object="\"Object.Selected Item\" \"Object.Selected Item\" "
+Object=
 MyChar_C="\"Object.Inventory\" \"Object.Inventory.Inventory[0]\" \"Object.Inventory.Inventory[1]\" \"Object.Inventory.Inventory[2]\" \"Object.Inventory\" \"Object.Inventory.Inventory[0]\" \"Object.Inventory.Inventory[1]\" \"Object.Inventory.Inventory[2]\" "
 Character="\"Object.Inventory\" \"Object.Inventory\" "
 Pawn="\"Object.Inventory\" \"Object.Inventory\" "
@@ -1743,67 +1742,51 @@ LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.G
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" "
 Button="\"Object.Layout.Slot.Object.Layout.Layout"
-Inventory_UI_C="\"Object.Selected Item\" \"Object.Selected Item\" "
-UserWidget="\"Object.Selected Item\" \"Object.Selected Item\" "
+Inventory_UI_C=
+UserWidget=
 TextBlock=
 TextLayoutWidget=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 TopDownCharacter_C="\"Object.Inventory\" \"Object.Inventory\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
 ItemDrop_BP_C="\"Object.Item Data\" \"Object.Item Data\" "
-Item_Data_UI_C="\"Object.Item Data\" \"Object.Item Data\" "
-
-[/Script/UnrealEd.EditorLoadingSavingSettings]
-AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
-bForceCompilationAtStartup=False
-bRestoreOpenAssetTabsOnRestart=False
-bEnableSourceControlCompatabilityCheck=False
-bMonitorContentDirectories=True
-AutoReimportThreshold=3.000000
-bAutoCreateAssets=True
-bAutoDeleteAssets=True
-bDetectChangesOnStartup=True
-bPromptBeforeAutoImporting=True
-bDeleteSourceFilesWithAssets=False
-bAutomaticallyCheckoutOnAssetModification=False
-bSCCUseGlobalSettings=False
+Item_Data_UI_C=
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+InteractiveObject_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Inventory/MyChar.MyChar=0
 /Game/Inventory/Inventory_Struct.Inventory_Struct=0
 /Game/Inventory/Inventory_UI.Inventory_UI=0
-/Game/Inventory/Item_Data_UI.Item_Data_UI=1
+/Game/Inventory/Item_Data_UI.Item_Data_UI=0
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
 /Game/TopDownBP/Blueprints/Inventory.Inventory=0
+/Game/TopDownBP/Blueprints/Inventory.Inventory=0
+/Game/TopDownBP/Blueprints/InventoryType.InventoryType=0
 /Game/TopDownBP/Blueprints/InventoryType.InventoryType=0
 /Game/Inventory/Interact_BPI.Interact_BPI=0
+/Game/TopDownBP/Blueprints/InteractiveObject_Blueprint.InteractiveObject_Blueprint=0
+/Game/TopDownBP/Blueprints/InventoryItem.InventoryItem=0
+/Game/TopDownBP/Blueprints/KeycardType.KeycardType=0
+/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter=0
+/Game/TopDownBP/Blueprints/InteractiveObject.InteractiveObject=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/Blueprints/InteractiveObject.InteractiveObject;
 RecentlyPlaced=/Game/Inventory/ItemDrop_BP.ItemDrop_BP;
-<<<<<<< HEAD
+RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 None=======
-=======
-=======
->>>>>>> master
-
-[DetailCustomWidgetExpansion]
-UserDefinedStruct=
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-
-[MessageLog]
-LastLogListing=MapCheck
-
-[AssetEditorToolkitTabLocation]
-/Game/TopDownBP/Blueprints/Inventory.Inventory=0
-/Game/TopDownBP/Blueprints/InventoryType.InventoryType=0
-/Game/TopDownBP/Blueprints/InteractiveObject_Blueprint.InteractiveObject_Blueprint=0
-/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
-/Game/TopDownBP/Blueprints/InventoryItem.InventoryItem=0
->>>>>>> master
+None=======
+None=======
 
 [DetailCategoriesAdvanced]
-UserDefinedEnum.Enumerators=False
+UserDefinedEnum.Enumerators=True
 
 [/Script/UnrealEd.ContentBrowserSettings]
 DisplayL10NFolder=False
@@ -1811,24 +1794,10 @@ DisplayPluginFolders=False
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
-OnlyBuildSelectedLevels=False
-OnlyBuildVisibility=False
-
-[LightingBuildOptions]
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
+OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
-
-[PlacementMode]
-RecentlyPlaced=/Game/TopDownBP/Blueprints/InteractiveObject.InteractiveObject;
-RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
-
-[DetailPropertyExpansion]
-StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-Object=
+OnlyBuildVisibility=False
 
 
